--- a/style.scss
+++ b/style.scss
@@ -134,7 +134,7 @@ $sharpIn: cubic-bezier(0.03, 0.45, 0.25, 1);
 /*objects*/
 html,body{width:100%; height: 100%}
 body{font-family: $roboto; transition: background-color 0.5s ease; background-color: #FFF;
-	&.t-dark{background-color:#1e336d;}
+	&.t-dark{background-color:#fff}
 }
 h1{font-size: 2em; font-family: $playfair; line-height:1.5}
 h2{font-size: 1.75em; font-family: $playfair; line-height:1.5;
@@ -509,12 +509,15 @@ a{color:inherit}
 		.c-hotspots__item__title{@include delay(1+(0.2*$i))}
 	}
 }
-.c-grid__line{width: 1px; height: 100%; position: fixed; background-color: #000; top: 0; opacity: 0.07; z-index:10; transition:background-color 0.5s ease;
-	.t-dark &{background-color: #6fa1ff; opacity: 0.25}
+.c-grid__line{width: 1px; height: 100%; position: fixed; background-color: #000; top: 0; opacity: 0.07; z-index:10; transition:background-color 0.5s ease; transform-origin:0% 0%;
+	.t-dark &{background-color: #6fa1ff; opacity: 0.2}
 	@include device(xs){display:none}
+	
 }
 @for $i from 0 through 5 {
-	.c-line-#{$i}{left: percentage($i/6); @extend .c-grid__line}
+	.c-line-#{$i}{left: percentage($i/6); @extend .c-grid__line;
+		.boot &{@include scaleInDown; @include anim; @include delay(0.15*$i)}
+	}
 }
 .c-line-2{z-index: 20}
 .c-next{background-color:#e8e8e8; padding: 3em 0 5em; margin-top: 6em; padding-right:percentage(1/3); position: relative;
