--- a/style.scss
+++ b/style.scss
@@ -135,6 +135,7 @@ $sharpIn: cubic-bezier(0.03, 0.45, 0.25, 1);
 html,body{width:100%; height: 100%}
 body{font-family: $roboto; transition: background-color 0.5s ease; background-color: #FFF;
 	&.t-dark{background-color:#fff}
+	&.u-oh{overflow: hidden}
 }
 h1{font-size: 2em; font-family: $playfair; line-height:1.5}
 h2{font-size: 1.75em; font-family: $playfair; line-height:1.5;
@@ -765,7 +766,9 @@ a{color:inherit}
 	}
 	@include device(xs){width:auto; float:none}
 }
-.c-hero{ width: 100%; height: 100%;
+.c-hero{ width: 100%; height: 100%; background-size: cover; background-repeat: no-repeat; background-position: center;
+	.u-table{width: 100%; height: 100%;}
+	.u-cell{vertical-align: middle; text-align: center}
 	.boot &{@include anim; @include delay(1.7); @include fadeInLeft;}
 }
 .c-loader{position: fixed; z-index:2; width: 100%; height: 100%; z-index:50; display:none;
@@ -809,6 +812,17 @@ a{color:inherit}
 		&:before{background-color: #c0c2ce}
 	}
 }
-.pace {-webkit-pointer-events: none; pointer-events: none; -webkit-user-select: none; -moz-user-select: none; user-select: none}
-.pace-inactive {display: none}
-.pace .pace-progress {background: #fff; position: fixed; z-index: 2000; top:0em; right: 100%; width: 100%;height:2px}
+.c-pop{position: fixed; top: 0; left:0; background-color: rgba(0,0,0,0.4); width: 100%; height: 100%; z-index: 200; display: none;
+	.u-table{width: 100%;height: 100%;}
+	.u-cell{vertical-align: middle}
+	.u-canvas{width: 100%; height: 100%;}
+	iframe{width: 100%; height: 100%; top:0; left: 0;}
+}
+.c-pop__box{background-color: #fff; width: 960px; height: 540px; margin: 0 auto; position: relative; text-align: center}
+.c-pop__close{width: 2em;height: 2em; background-position:center; background-repeat: no-repeat;; background-size: contain; @include image('btn-close.svg'); display: inline-block; position: absolute; top: -36px; right: 0; transition:opacity 0.3s ease;
+	&:hover{opacity:0.6;};
+}
+.o-button--video{width: 5em; height: 5em; display: inline-block; background-position: center; background-repeat: no-repeat; @include image('btn-play.svg'); background-size: contain; transition: opacity 0.5s ease;
+	&:hover{opacity: 0.6}
+}
+
