--- a/style.scss
+++ b/style.scss
@@ -621,7 +621,7 @@ a{color:inherit}
 		}
 	}
 }
-
+.c-pg-title{display:none;}
 .c-hotspots{position: absolute; width: 100%; top:40%; z-index: 5;
 	.o-index{@include prefix((transform:scale(1,1))); opacity: 0.7}
 	@include device(xs){display:none}
@@ -863,3 +863,6 @@ a{color:inherit}
 	.c-pop__close{position: static; width: 1.5em;height: 1.5em;}	
 }
 .c-plot__id{font-size: 0.875em; display: inline-block; position: relative; top: -5px; padding-right: 2.5em}
+.c-team__image{height:15em; background-color:#b2bfe1; background-size:cover; background-position:center; background-repeat:no-repeat; @include image('coffee.jpg');	
+	.boot &{@include anim; @include delay(0.5); @include fadeInUp}
+}
