--- a/style.scss
+++ b/style.scss
@@ -337,7 +337,7 @@ a{color:inherit}
 	&.left{left:percentage(1/6);}
 }
 .o-page-thumb{width:percentage(1/6); left: percentage(1/6); position: absolute; top:0; height:40%; overflow: hidden;
-	&:before{content:""; position: absolute; background-color:$blue; top:0; height:100%; width: 100%; @include prefix((transform-origin:0% 0%)); z-index:-1}
+	&:before{content:""; position: absolute; background-color:$blue; top:0; height:100%; width: 100%; @include prefix((transform-origin:0% 0%)); z-index:0}
 	.u-table{width: 100%; height: 100%}
 	.u-cell{vertical-align:bottom}
 	figure{background-color: transparent; background-size:cover; background-position:center; height:100%; width:100%}
@@ -903,3 +903,4 @@ a{color:inherit}
 .c-team__image{height:15em; background-color:#b2bfe1; background-size:cover; background-position:center; background-repeat:no-repeat; @include image('coffee.jpg');	
 	.boot &{@include anim; @include delay(0.5); @include fadeInUp}
 }
+.c-box{width: 1600px; height: 100%; margin:0 auto; position: fixed}
